--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "o-ai",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "An Electron application with Vue and TypeScript",
   "main": "./out/main/index.js",
   "author": "vuthanhbayit@gmail.com",
@@ -19,7 +19,7 @@
     "build:win": "npm run build && electron-builder --win",
     "build:mac": "npm run build && electron-builder --mac",
     "build:linux": "npm run build && electron-builder --linux",
-    "publish:mac": "npm run build && electron-builder --mac --publish always"
+    "publish:mac": "dotenv -e .env -- npm run build && dotenv -e .env -- electron-builder --mac --publish always"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
@@ -43,6 +43,7 @@
     "@types/node": "^22.19.1",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-vue": "^6.0.2",
+    "dotenv-cli": "^11.0.0",
     "electron": "^39.2.6",
     "electron-builder": "^26.0.12",
     "electron-vite": "^5.0.0",
