fix: build win portable

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -13,11 +13,22 @@ asarUnpack:
   - resources/**
 win:
   executableName: o-ai
+  target:
+    - target: nsis
+      arch:
+        - x64
+        - arm64
+    - target: portable
+      arch:
+        - x64
+        - arm64
 nsis:
   artifactName: ${name}-${version}-setup.${ext}
   shortcutName: ${productName}
   uninstallDisplayName: ${productName}
   createDesktopShortcut: always
+portable:
+  artifactName: ${name}-${version}-portable.${ext}
 mac:
   target:
     - target: dmg
