--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "o-ai",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "An Electron application with Vue and TypeScript",
   "main": "./out/main/index.js",
   "author": "vuthanhbayit@gmail.com",
@@ -18,8 +18,10 @@
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
     "build:mac": "npm run build && electron-builder --mac",
-    "build:linux": "npm run build && electron-builder --linux",
-    "publish:mac": "dotenv -e .env -- npm run build && dotenv -e .env -- electron-builder --mac --publish always"
+    "build:all": "npm run build && electron-builder --mac --win",
+    "publish:mac": "dotenv -e .env -- npm run build && dotenv -e .env -- electron-builder --mac --publish always",
+    "publish:win": "dotenv -e .env -- npm run build && dotenv -e .env -- electron-builder --win --publish always",
+    "publish:all": "dotenv -e .env -- npm run build && dotenv -e .env -- electron-builder --mac --win --publish always"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.2",
